Fix SVG display bug on Firefox

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -213,10 +213,11 @@ h2:before, .anchor:before {
   }
 
   img {
+    width: auto;
+    height: 1.5 em;
     max-width: 6em;
-    max-height: 1.5em;
-    width: 100%;
-    height: auto;
+    max-height: 100%;
     object-fit: contain;
+    display: inline-block;
   }
 }
